--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <div class="buttons">
             <a href="#seccion1" class="button">Desarrollo web Front-end</a>
+            <a href="#seccion2" class="button">HTML</a>
         </div>
     </div>
     <div class="informations">
