--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="buttons">
             <a href="#seccion1" class="button">Desarrollo web Front-end</a>
             <a href="#seccion2" class="button">HTML</a>
+            <a href="#seccion3" class="button">CSS</a>
         </div>
     </div>
     <div class="informations">
