add button javascript

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="#seccion1" class="button">Desarrollo web Front-end</a>
             <a href="#seccion2" class="button">HTML</a>
             <a href="#seccion3" class="button">CSS</a>
+            <a href="#seccion4" class="button">JavaScript</a>
         </div>
     </div>
     <div class="informations">
