add text javascript

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Integración de Diseño y Desarrollo: Colaborar estrechamente con diseñadores para implementar interfaces que reflejen la visión y la identidad visual del producto.</li>
             <li>Frameworks y Bibliotecas: Utilizar frameworks y bibliotecas como React, Angular o Vue.js para agilizar el desarrollo y facilitar la gestión del estado de la aplicación.</li>
         </ul>
-        <h2 id="Seccion2">HTML</h2>
+        <h2 id="seccion2">HTML</h2>
         <p>HTML no es un lenguaje de programación; es un lenguaje de marcado que define la estructura de tu contenido. HTML consiste en una serie de elementos que usarás para encerrar diferentes partes del contenido para que se vean o comporten de una determinada manera. Las etiquetas de encierre pueden hacer de una palabra o una imagen un hipervínculo a otro sitio, se pueden cambiar palabras a cursiva, agrandar o achicar la letra, etc</p>
         <h3>Las partes principales del elemento son:</h3>
         <ul>
@@ -74,6 +74,25 @@
         <p>Cada propiedad utilizada en CSS tiene un valor o conjunto de valores permitidos para esa propiedad. En esta lección veremos algunos de los valores y unidades más comunes en uso.</p>
         <h4>Imágenes, medios y elementos de forma</h4>
         <p>En esta lección veremos cómo se tratan ciertos elementos especiales en CSS. Las imágenes, otros medios y elementos de formulario se comportan de manera un poco diferente en términos de su capacidad para diseñarlos con CSS que los cuadros normales. Comprender qué es y qué no es posible puede ahorrar un poco de frustración, y esta lección resaltará algunas de las cosas principales que necesita saber.</p>
+       <h2 id="seccion4">JavaScript</h2>
+       <p> JavaScript es un robusto lenguaje de programación que se puede aplicar a un documento HTML y usarse para crear interactividad dinámica en los sitios web. Fue inventado por Brendan Eich, cofundador del proyecto Mozilla, Mozilla Foundation y la Corporación Mozilla.</p>
+       <p>Puedes hacer casi cualquier cosa con JavaScript. Puedes empezar con pequeñas cosas como carruseles, galerías de imágenes, diseños fluctuantes, y respuestas a las pulsaciones de botones. Con más experiencia, serás capaz de crear juegos, animaciones 2D y gráficos 3D, aplicaciones integradas basadas en bases de datos ¡y mucho más!</p>
+       <p>JavaScript por sí solo es bastante compacto aunque muy flexible, y los desarrolladores han escrito gran cantidad de herramientas encima del núcleo del lenguaje JavaScript, desbloqueando una gran cantidad de funcionalidad adicional con un mínimo esfuerzo. Esto incluye:</p>
+       <li>Interfaces de Programación de Aplicaciones del Navegador (APIs) — APIs construidas dentro de los navegadores que ofrecen funcionalidades como crear dinámicamente contenido HTML y establecer estilos CSS, hasta capturar y manipular un vídeo desde la cámara web del usuario, o generar gráficos 3D y muestras de sonido.</li>
+       <li>APIs de terceros, que permiten a los desarrolladores incorporar funcionalidades en sus sitios de otros proveedores de contenidos como Twitter o Facebook.</li>
+       <li>Marcos de trabajo y librerías de terceros que puedes aplicar a tu HTML para que puedas construir y publicar rápidamente sitios y aplicaciones.</li>
+       <h4>Variables</h4>
+       <p>Las Variables son contenedores en los que puedes almacenar valores. Primero debes declarar la variable con la palabra clave var (menos recomendado) o let, seguida del nombre que le quieras dar. Se recomienda más el uso de let que de var</p>
+       <li><strong>STRING: </strong>Esto es una secuencia de texto conocida como cadena. Para indicar que la variable es una cadena, debes escribirlo entre comillas. ejemplo :</li>
+       <p><strong>let miVariable = 'Bob'; </strong></p>
+       <li><strong>NUMBER: </strong>Esto es un número. Los números no tienen comillas.</li>
+       <p><strong>let miVariable = 10;</strong></p>
+       <li><strong>BOOLEAN: </strong>Tienen valor verdadero/falso. true/false son palabras especiales en JS, y no necesitan comillas.	</li>
+       <p><strong>let miVariable = true;</strong></p>
+       <li><strong>ARRAY: </strong>Una estructura que te permite almacenar varios valores en una sola referencia.	</li>
+       <p><strong>let miVariable = [1,'Bob','Steve',10];</strong></p>
+       <li><strong>OBJECT: </strong>Básicamente cualquier cosa. Todo en JavaScript es un objeto y puede ser almacenado en una variable. Mantén esto en mente mientras aprendes.</li>
+       <p><strong>let miVariable = document.querySelector('h1'); Todos los ejemplos anteriores también.</strong></p>
 
     </div>
 </body>
