add text backend

--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@
        <p><strong>let miVariable = [1,'Bob','Steve',10];</strong></p>
        <li><strong>OBJECT: </strong>Básicamente cualquier cosa. Todo en JavaScript es un objeto y puede ser almacenado en una variable. Mantén esto en mente mientras aprendes.</li>
        <p><strong>let miVariable = document.querySelector('h1'); Todos los ejemplos anteriores también.</strong></p>
+       <h2 id="seccion5">Desarrollo Web Back-end</h2>
+       <p>El backend es la parte lógica de un sitio, este se encarga de la lógica de negocio, de recibir y devolver datos procesados a las apps y sitios web, de forma que facilite la navegación y se garantice el funcionamiento y la seguridad de diferentes funciones. </p>
+       <h4> principales responsabilidades del backend</h4>
+       <li>Gestión de datos: El backend se encarga de la interacción con la base de datos, lo que implica el almacenamiento, recuperación y manipulación de datos. Esto puede incluir la creación, lectura, actualización y eliminación de registros en la base.</li>
+       <li>Lógica de negocio: Contiene la lógica y las reglas que definen cómo funciona la aplicación. Esto incluye procesos como la autenticación y autorización de usuarios, la gestión de pedidos en una tienda en línea, entre otros.</li>
+       <li>Seguridad: El backend es responsable de implementar medidas de seguridad para proteger los datos y a la aplicación contra amenazas y ataques cibernéticos. Esto implica la autenticación de usuarios, la autorización de acceso y la encriptación de datos.</li>
+       <li>Integraciones: Muchas aplicaciones web necesitan interactuar con otros sistemas y servicios, como APIs de terceros, servicios de pago, servicios de correo electrónico, redes sociales, entre otros, y el backend facilita estas integraciones. </li>
+       <li>Rendimiento y escalabilidad: Implica la gestión eficiente de los recursos del servidor y la optimización del código. El backend se encarga de optimizar el rendimiento de la aplicación y permitir que esta se pueda escalar para manejar un mayor número de usuarios y cargas de trabajo.</li>
+    <li>Mantenimiento: En el backend se realizan las actualizaciones y correcciones de errores de la aplicación. Los desarrolladores pueden mantener y mejorar ciertos aspectos de la aplicación sin afectar la experiencia del usuario final.</li>
+    <li>Administración y monitoreo: Proporciona herramientas para administrar y supervisar el funcionamiento de la aplicación, lo que permite a los desarrolladores realizar diagnósticos y tomar medidas correctivas cuando sea necesario.</li>
+    <h4>Componentes del backend</h4>
+    <li>Servidores: corresponde a una máquina física o virtual que recopila, aloja, procesa y gestiona los recursos necesarios para ejecutar una aplicación web. Los servidores al recibir las peticiones de los usuarios, ejecutan la lógica necesaria y devuelven las respuestas a través de un protocolo de comunicación, normalmente HTTP. Los desarrolladores web pueden programar diferentes servidores para ejecutar específicas acciones de código según las entradas recibidas.</li>
+    <li>Lógica de aplicación: es la secuencia de operaciones que los programadores codifican en el backend para terminar las tareas. Por esta razón los sitios web contienen funciones y algoritmos, permitiendo que se produzca información y acciones a partir del comportamiento de los usuarios dentro de una plataforma. Los especialistas en backend crean una lógica que se ejecuta casi exclusivamente en servidores, interpretando datos y produciendo salidas.</li>
+    <li>Frameworks: son las guías que se usan al estructurar el código, lógica y otros aspectos relacionados con la arquitectura web, son plantillas para el backend, que utilizan los programadores para que la escritura y edición del código de su servidor se les faciliten. Algunos marcos incluyen bibliotecas de datos y herramientas que brindan acceso a segmentos funcionales del código.</li>
+    <li>Bases de datos: contienen la información a la que acceden los servidores y así completar funciones directas del sitio web, además disponen de opciones para clasificar la información a la que acceden los usuarios. Por lo general estos datos son números enteros, caracteres y matrices.</li>
+    <li>APIs: permiten que los programas de software establezcan comunicación con otros servidores y bases de datos con el objetivo de intercambiar información. Su función es simplificar la presentación de toda la información almacenada en múltiples bases de datos en un solo lugar.</li>
 
     </div>
 </body>
