fixed line 55 to 81

--- a/index.html
+++ b/index.html
@@ -42,42 +42,44 @@
             <li>El contenido: este es el contenido del elemento, que en este caso es sólo texto.</li>
             <li>El elemento: la etiqueta de apertura, más la etiqueta de cierre, más el contenido equivale al elemento.</li>
           </ul>
-        </section>
-        <h3>Anatomia de documento HTML</h3>
-        <ul>
+          <h3>Anatomia de documento HTML</h3>
+          <ul>
             <li><strong>!DOCTYPE html</strong> — el tipo de documento</li>
             <li> <strong> html</strong> — el elemento encierra todo el contenido de la página entera y, a veces, se le conoce como el elemento raíz (root element).</li>
             <li> <strong>head</strong> Este elemento actúa como un contenedor de todo aquello que quieres incluir en la página HTML que no es contenido visible por los visitantes de la página. Incluye cosas como palabras clave (keywords), una descripción de la página que quieres que aparezca en resultados de búsquedas, código CSS para dar estilo al contenido, declaraciones del juego de caracteres, etc.</li>
             <li><strong>meta charsear="UTF-8"</strong> ste elemento establece el juego de caracteres que tu documento usará en utf-8, que incluye casi todos los caracteres de todos los idiomas humanos. Básicamente, puede manejar cualquier contenido de texto que puedas incluir. No hay razón para no establecerlo, y puede evitar problemas en el futuro.</li>
             <li><strong>title</strong>stablece el título de tu página, que es el título que aparece en la pestaña o en la barra de título del navegador cuando la página es cargada, y se usa para describir la página cuando es añadida a los marcadores o como favorita.</li>
             <li><strong>body</strong>Encierra todo el contenido que deseas mostrar a los usuarios web que visiten tu página, ya sea texto, imágenes, videos, juegos, pistas de audio reproducibles, y demás.</li>
-        </ul>
-        <h2 id="seccion3">CSS</h2>
-        <p>Mientras que HTML se utiliza para definir la estructura y la semántica del contenido, CSS se usa para darle estilo y posicionarlo visualmente. CSS se puede usar, por ejemplo, para cambiar la fuente, el color, el tamaño y el espaciado del contenido, para formar multiples columnas, añadir animaciones y otros elementos decorativos.</p>
-        <h3>Itinerario de aprendizaje</h3>
-        <p>Antes de empezar con CSS deberemos conocer los fundamentos de HTML.Se recomienda aprender HTML y CSS al mismo tiempo, trabajando de forma conjunta ambas disciplinas. CSS aporta un valor añadido a HTML y no podrás aprender CSS sin controlar HTML.</p>
-        <p>Para vincular styles.css a index.html, añade la siguiente línea en algún lugar dentro del head del documento HTML:</p>
-        <p>El elemento  link le dice al navegador que hay una hoja de estilo con el atributo rel y la ubicación de esa hoja de estilo como el valor del atributo href. Puedes probar si el CSS funciona añadiendo una regla a styles.css.</p>
-        <h3>GUIA :</h3>
-        <h4>Cascada y herencia</h4>
-        <p>El objetivo de ésta lección es desarrollar tu entendimiento sobre algunos de los conceptos fundamentales de CSS - cascada, especificidad y herencia - los cuales controlan como CSS es aplicado a HTML y como sus conflitos son resueltos.</p>
-        <h4>Selectores CSS</h4>
-        <p>Hay una gran variedad de selectores disponibles en CSS, permitiendo una fina precision para seleccionar elementos de estilo. En este artículo y sub-artículos, repasaremos los diferentes tipos en detalle y veremos como funcionan. Los sub-artículos son los siguientes:</p>
-        <li>Selectores de tipo, clase e ID</li>
-        <li>Selectores de Atributos</li>
-        <li>Pseudo-clases y pseudo-elementos</li>
-        <li>Combinadores</li>
-        <h4>El modelo de caja</h4>
-        <p>Todo en CSS tiene una caja a su alrededor, y comprender estas cajas es clave para poder crear diseños con CSS, o para alinear elementos con otros elementos. En esta lección, analizaremos adecuadamente el modelo CSS Box, para que pueda pasar a tareas de diseño más complejas con una comprensión de cómo funciona y la terminología que se relaciona con él.</p>
-        <h4>Fondos y bordes</h4>
-        <p>En esta lección, veremos algunas de las cosas creativas que puede hacer con fondos y bordes CSS. Al agregar degradados, imágenes de fondo y esquinas redondeadas, los fondos y los bordes son la respuesta a muchas preguntas de estilo en CSS.</p>
-        <h4>Manejo de diferentes direcciones de texto</h4>
-        <p>A medida que avance en su estudio y comience a trabajar con el diseño, comprenderá los modos de escritura será muy útil para usted, por lo tanto, los presentaremos en este artículo.</p>
-        <h4>Valores y unidades de CSS</h4>
-        <p>Cada propiedad utilizada en CSS tiene un valor o conjunto de valores permitidos para esa propiedad. En esta lección veremos algunos de los valores y unidades más comunes en uso.</p>
-        <h4>Imágenes, medios y elementos de forma</h4>
-        <p>En esta lección veremos cómo se tratan ciertos elementos especiales en CSS. Las imágenes, otros medios y elementos de formulario se comportan de manera un poco diferente en términos de su capacidad para diseñarlos con CSS que los cuadros normales. Comprender qué es y qué no es posible puede ahorrar un poco de frustración, y esta lección resaltará algunas de las cosas principales que necesita saber.</p>
-       <h2 id="seccion4">JavaScript</h2>
+          </ul>
+       </section>
+       <section id="seccion3">
+         <h2 >CSS</h2>
+         <p>Mientras que HTML se utiliza para definir la estructura y la semántica del contenido, CSS se usa para darle estilo y posicionarlo visualmente. CSS se puede usar, por ejemplo, para cambiar la fuente, el color, el tamaño y el espaciado del contenido, para formar multiples columnas, añadir animaciones y otros elementos decorativos.</p>
+         <h3>Itinerario de aprendizaje</h3>
+         <p>Antes de empezar con CSS deberemos conocer los fundamentos de HTML.Se recomienda aprender HTML y CSS al mismo tiempo, trabajando de forma conjunta ambas disciplinas. CSS aporta un valor añadido a HTML y no podrás aprender CSS sin controlar HTML.</p>
+         <p>Para vincular styles.css a index.html, añade la siguiente línea en algún lugar dentro del head del documento HTML:</p>
+         <p>El elemento  link le dice al navegador que hay una hoja de estilo con el atributo rel y la ubicación de esa hoja de estilo como el valor del atributo href. Puedes probar si el CSS funciona añadiendo una regla a styles.css.</p>
+         <h3>GUIA :</h3>
+         <h4>Cascada y herencia</h4>
+         <p>El objetivo de ésta lección es desarrollar tu entendimiento sobre algunos de los conceptos fundamentales de CSS - cascada, especificidad y herencia - los cuales controlan como CSS es aplicado a HTML y como sus conflitos son resueltos.</p>
+         <h4>Selectores CSS</h4>
+         <p>Hay una gran variedad de selectores disponibles en CSS, permitiendo una fina precision para seleccionar elementos de estilo. En este artículo y sub-artículos, repasaremos los diferentes tipos en detalle y veremos como funcionan. Los sub-artículos son los siguientes:</p>
+         <li>Selectores de tipo, clase e ID</li>
+         <li>Selectores de Atributos</li>
+         <li>Pseudo-clases y pseudo-elementos</li>
+         <li>Combinadores</li>
+         <h4>El modelo de caja</h4>
+         <p>Todo en CSS tiene una caja a su alrededor, y comprender estas cajas es clave para poder crear diseños con CSS, o para alinear elementos con otros elementos. En esta lección, analizaremos adecuadamente el modelo CSS Box, para que pueda pasar a tareas de diseño más complejas con una comprensión de cómo funciona y la terminología que se relaciona con él.</p>
+         <h4>Fondos y bordes</h4>
+         <p>En esta lección, veremos algunas de las cosas creativas que puede hacer con fondos y bordes CSS. Al agregar degradados, imágenes de fondo y esquinas redondeadas, los fondos y los bordes son la respuesta a muchas preguntas de estilo en CSS.</p>
+          <h4>Manejo de diferentes direcciones de texto</h4>
+         <p>A medida que avance en su estudio y comience a trabajar con el diseño, comprenderá los modos de escritura será muy útil para usted, por lo tanto, los presentaremos en este artículo.</p>
+         <h4>Valores y unidades de CSS</h4>
+         <p>Cada propiedad utilizada en CSS tiene un valor o conjunto de valores permitidos para esa propiedad. En esta lección veremos algunos de los valores y unidades más comunes en uso.</p>
+         <h4>Imágenes, medios y elementos de forma</h4>
+          <p>En esta lección veremos cómo se tratan ciertos elementos especiales en CSS. Las imágenes, otros medios y elementos de formulario se comportan de manera un poco diferente en términos de su capacidad para diseñarlos con CSS que los cuadros normales. Comprender qué es y qué no es posible puede ahorrar un poco de frustración, y esta lección resaltará algunas de las cosas principales que necesita saber.</p>
+       </section>
+        <h2 id="seccion4">JavaScript</h2>
        <p> JavaScript es un robusto lenguaje de programación que se puede aplicar a un documento HTML y usarse para crear interactividad dinámica en los sitios web. Fue inventado por Brendan Eich, cofundador del proyecto Mozilla, Mozilla Foundation y la Corporación Mozilla.</p>
        <p>Puedes hacer casi cualquier cosa con JavaScript. Puedes empezar con pequeñas cosas como carruseles, galerías de imágenes, diseños fluctuantes, y respuestas a las pulsaciones de botones. Con más experiencia, serás capaz de crear juegos, animaciones 2D y gráficos 3D, aplicaciones integradas basadas en bases de datos ¡y mucho más!</p>
        <p>JavaScript por sí solo es bastante compacto aunque muy flexible, y los desarrolladores han escrito gran cantidad de herramientas encima del núcleo del lenguaje JavaScript, desbloqueando una gran cantidad de funcionalidad adicional con un mínimo esfuerzo. Esto incluye:</p>
