fixed line 82 to 102

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
          <h4>Imágenes, medios y elementos de forma</h4>
           <p>En esta lección veremos cómo se tratan ciertos elementos especiales en CSS. Las imágenes, otros medios y elementos de formulario se comportan de manera un poco diferente en términos de su capacidad para diseñarlos con CSS que los cuadros normales. Comprender qué es y qué no es posible puede ahorrar un poco de frustración, y esta lección resaltará algunas de las cosas principales que necesita saber.</p>
        </section>
-        <h2 id="seccion4">JavaScript</h2>
+       <section id="seccion4">
+        <h2 >JavaScript</h2>
        <p> JavaScript es un robusto lenguaje de programación que se puede aplicar a un documento HTML y usarse para crear interactividad dinámica en los sitios web. Fue inventado por Brendan Eich, cofundador del proyecto Mozilla, Mozilla Foundation y la Corporación Mozilla.</p>
        <p>Puedes hacer casi cualquier cosa con JavaScript. Puedes empezar con pequeñas cosas como carruseles, galerías de imágenes, diseños fluctuantes, y respuestas a las pulsaciones de botones. Con más experiencia, serás capaz de crear juegos, animaciones 2D y gráficos 3D, aplicaciones integradas basadas en bases de datos ¡y mucho más!</p>
        <p>JavaScript por sí solo es bastante compacto aunque muy flexible, y los desarrolladores han escrito gran cantidad de herramientas encima del núcleo del lenguaje JavaScript, desbloqueando una gran cantidad de funcionalidad adicional con un mínimo esfuerzo. Esto incluye:</p>
@@ -98,6 +99,7 @@
        <p><strong>let miVariable = [1,'Bob','Steve',10];</strong></p>
        <li><strong>OBJECT: </strong>Básicamente cualquier cosa. Todo en JavaScript es un objeto y puede ser almacenado en una variable. Mantén esto en mente mientras aprendes.</li>
        <p><strong>let miVariable = document.querySelector('h1'); Todos los ejemplos anteriores también.</strong></p>
+    </section>
        <h2 id="seccion5">Desarrollo Web Back-end</h2>
        <p>El backend es la parte lógica de un sitio, este se encarga de la lógica de negocio, de recibir y devolver datos procesados a las apps y sitios web, de forma que facilite la navegación y se garantice el funcionamiento y la seguridad de diferentes funciones. </p>
        <h4> principales responsabilidades del backend</h4>
